adjust css and html according to review, ellipsis added to avoid horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
-
+/* no unit required in case of O! */
 .nopadding {
-	padding: 0px;
+	padding: 0;
 }
 
 .logo {
@@ -9,14 +9,15 @@
 }
 
 body {
-	font-family: 'Lato', sans-serif;
+	font-family: "Lato", sans-serif;
 	color: #2d3c49;
 	font-weight: 100;
-
 }
+
 h2 {
 	font-size: 20px;
 }
+
 h3 {
 	font-size: 15px;
 }
@@ -24,6 +25,13 @@ h3 {
 hr{
 	background-color: #7d97ad;
 	height:3px;
+}
+
+/* handle too long links with an ellipsis*/
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .title-extra {
@@ -45,9 +53,11 @@ hr{
 	h2 {
 	font-size: 24px;
 	}
+
 	h3 {
 		font-size: 20px;
 	}
+
 	.title-extra {
 		font-size: 40px;
 	}
